--- a/src/App.scss
+++ b/src/App.scss
@@ -335,6 +335,8 @@ ul.list {
 
     img {
         display: block;
+        width: 100%;
+        height: 100%;
         max-height: 6rem;
         max-width: 12rem;
         object-fit: contain;
