--- a/src/App.scss
+++ b/src/App.scss
@@ -347,6 +347,21 @@ ul.list {
     }
 }
 
+.profile-image {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+
+    img {
+        height: 3em;
+        width: 3em;
+        object-fit: cover;
+        border-radius: 1.5em;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .cols {
         flex-direction: column !important;
