--- a/src/assets/css/Carousel.scss
+++ b/src/assets/css/Carousel.scss
@@ -1,57 +1,71 @@
 .carousel {
-    width: 100%;
-    height: max-content;
-    position: relative;
-    overflow: hidden;
-    min-height: 5em;
+    display: flex;
+    gap: 2em;
 
-    .wrapper {
-        margin: 0 auto;
-        display: flex;
-        flex-wrap: nowrap;
+    .caroussel-container {
         width: 100%;
         height: max-content;
-        transition: 0.5s ease-in-out;
+        position: relative;
+        overflow: hidden;
+        min-height: 5em;
 
-        .item {
-            flex: 0 0 100%;
-            height: 100%;
-            .item-container {
-                width: calc(100% - 8em);
-                margin: 0 auto;
+        .wrapper {
+            margin: 0 auto;
+            display: flex;
+            flex-wrap: nowrap;
+            width: 100%;
+            height: max-content;
+            transition: 0.5s ease-in-out;
+
+            .item {
+                flex: 0 0 100%;
+                height: 100%;
+                .item-container {
+                    width: calc(100%);
+                    margin: 0 auto;
+                }
             }
         }
     }
+}
 
-    .controls {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+.carousel-controls {
+    padding-top: 2em;
+    display: flex;
+    justify-content: space-around;
 
-        svg {
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
+    .small-screen {
+        display: none;
+    }
+}
 
-            path {
-                stroke: none;
-            }
+button.control {
+    border: none;
+    background: none;
+    svg {
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+
+        path {
+            stroke: none;
         }
     }
 }
 
 @media screen and (max-width: 768px) {
     .carousel {
-        .wrapper .item .item-container {
-            width: 100%;
+        .large-screen {
+            display: none;
         }
-        .controls {
-            padding-top: 1em;
-            position: relative;
+    }
+
+    .carousel-controls {
+        position: relative;
+        justify-content: space-between;
+
+        .small-screen {
+            display: block;
         }
     }
 }
