--- a/src/App.scss
+++ b/src/App.scss
@@ -66,6 +66,10 @@ body {
     padding-top: 16px;
 }
 
+.padding-bottom {
+    padding-bottom: 16px;
+}
+
 h1 {
     padding: 0 0 16px 0;
     font-size: 2.5em;
@@ -368,6 +372,12 @@ ul.list-gap {
         object-fit: cover;
         border-radius: 1.5em;
     }
+}
+
+.avis-list {
+    display: flex;
+    flex-direction: column;
+    gap: 4em;
 }
 
 .avis {
