Continue to update v2

--- a/src/App.scss
+++ b/src/App.scss
@@ -402,6 +402,7 @@ ul.list-gap {
     height: 14em;
     border: var(--main-3) dotted 0.5em;
     border-radius: 14em;
+    background: var(--complementary-3);
 
     .counter-number {
         font-size: xxx-large;
